2005-08-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly: add Rest_engraver only once.

	* scm/define-music-display-methods.scm (KeyChangeEvent): only do
	(*parser*) lookup if (*parser*) != #f.

2005-08-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/slur-script.ly: Add example of reverting
	inside-slur for fingering.

	* scm/define-grobs.scm (DynamicLineSpanner, Fingering,
	TextScript): Explicitly set inside-slur #f, forcing these out of slur.

	* lily/slur-engraver.cc (acknowledge_extra_object): Only invoke
	outside_slur_callback if inside-slur == #f (as opposed to unset).

2005-08-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* tex/GNUmakefile (INSTALLATION_FILES): Remove enc symlink setup,
	encoding files are already removed.

2005-08-15  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Instrument names):
	Document a workaround for instrument names that collide with
	system start braces/brackets.

2005-08-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/rest-collision.cc (do_shift): spello.

	* input/proportional.ly: use #'used property. Set break-overshoot property.

	* mf/feta-arrow.mf: center on arrow tip center, iso. tip edge.

	* lily/paper-column.cc: add #'used property

	* lily/mark-engraver.cc (stop_translation_timestep): set grob
	array for staves found.

	* lily/metronome-engraver.cc (stop_translation_timestep): set grob
	array for stavesFound.

	* lily/staff-spacing.cc (next_note_correction): add fixed and
	space to calling convention. This fixes spacing of accidentals
	after barlines.

	* input/regression/spacing-accidental-stretch.ly: add barline -
	accidental case.

	* scm/framework-ps.scm (page-header): add version number to
	creator
	(eps-header): idem.

	* mf/feta-bolletjes.mf: swap d0 and u0 fa heads.
	
2005-08-13  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/global.itely: add "fit as much as
	possible onto this page" example (Vertical spacing).
